# fineval

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
data/toy/: stock_month_panel.parquet  text_packet_examples.json
docs/: README.md  api-overview.md  aqr-ingestion-implementation-plan.md  benchmark-hierarchy.md  benchmark-implementation-plan.md  doi-benchmark-replication-plan.md  extension-architecture.md  model_agnostic_runtime.md  prototype-expansion-roadmap.md  quickstart.md  validation-expansion-plan.md  validation-layer.md  wave1-implementation-spec.md
examples/: README.md  toy_end_to_end.py
src/fineval/: __init__.py
src/fineval/analysis/: predictive_regression.py
src/fineval/backtest/: monthly_runner.py  rolling_runner.py
src/fineval/benchmarks/: aqr_ingestion.py
src/fineval/cli/: run_prototype.py
src/fineval/core/: datasets.py
src/fineval/data/: monthly_packet.py  structured_block.py
src/fineval/eval/: fineval.py  reliability.py
src/fineval/portfolio/: allocator.py
src/fineval/presets/: __init__.py  decision_quality.py  portfolio_validation.py
src/fineval/reports/: __init__.py  base.py  decision_quality.py  portfolio_validation.py  reliability.py
tests/: conftest.py  test_action_mapping.py  test_allocator.py  test_aqr_factor_ingestion.py  test_decision_object_schema.py  test_example_toy_end_to_end.py  test_fineval_scores.py  test_monthly_packet.py  test_monthly_runner_smoke.py  test_packet_contracts.py  test_presets.py  test_public_api.py  test_reports.py  test_rolling_runner.py  test_score_breakdowns.py  test_testsuite.py
(+7 files in other folders)
