[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fineval"
version = "0.1.0"
description = "Finance-native evaluation framework for LLM investment decisions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pydantic>=2.0",
  "statsmodels>=0.14",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
fineval = "fineval.cli.run_prototype:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fineval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
